@@ -1,3 +1,11 @@
+Mon Dec  1 10:44:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/tests/Bug_3418_Regression/*:
+          Added new regression test for bug 3418, this has not been
+          fixed yet. Thanks to Vladimir Zykov
+          <vladimir dot zykov at prismtech dot com> for creating this
+          test
+
 Sat Nov 29 08:00:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Explicit_Event_Loop/run_test.pl
